# sfrush

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  _build_run.bat  do_build.ps1  sfrush.recomp.toml
include/: sfrush.h
patches/: n64modernruntime_msvc_fixes.patch  patches.h
rsp/: aspMain.cpp
scripts/: analyze_boot.py  analyze_rom.py  extract_symbols.py  find_audio_bank.py  find_external_calls.py
src/game/: input.cpp  recomp_api.cpp  rom_decompression.cpp  stubs.cpp
src/main/: audio.cpp  game_init_stubs.cpp  main.cpp  os_redirects.cpp  os_stubs.cpp  register_overlays.cpp  register_patches.cpp  rt64_render_context.cpp  section_table.cpp  support.cpp
symbols/: sfrush.game.syms.toml  sfrush.us.syms.toml
tools/: build_recomp_rom.js  decompress_game_code.js  fix_jal_targets.js  identify_libultra.js  scan_functions.js
tools/m64p_debug/: README.md  bss_init_code.c  m64p_state.js  mupen_162000.txt  parse_dma_table.js  read_sfrush_dump.js  sfrush_check_2aa0.js  sfrush_check_2ae8.js  sfrush_check_800f.js  sfrush_check_dacrate.js  sfrush_check_early.js  sfrush_compare.js  sfrush_dump.js  sfrush_dump_critical.js  sfrush_dump_range.js  sfrush_dumpmem.js  sfrush_fpu_state.js  sfrush_heap_check.js  sfrush_heap_deep.js  sfrush_rdram_dump.js  sfrush_state.json  sfrush_table_timing.json  sfrush_timing.js  sfrush_trace_table.js
